Bug 146966 - FILEEDIT ODT Moving multiple rows inserts also empty rows (not related to change tracking
Summary: FILEEDIT ODT Moving multiple rows inserts also empty rows (not related to cha...
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
7.4.0.0 alpha0+
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:7.4.0 target:7.3.1
Keywords: regression
Depends on:
Blocks: Track-Changes-Table
  Show dependency treegraph
 
Reported: 2022-01-24 12:49 UTC by NISZ LibreOffice Team
Modified: 2022-02-09 08:50 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
Example file from Writer with a table (10.14 KB, application/vnd.oasis.opendocument.text)
2022-01-24 12:50 UTC, NISZ LibreOffice Team
Details
Screenshot from the problem (17.39 KB, image/png)
2022-01-24 12:51 UTC, NISZ LibreOffice Team
Details

Note You need to log in before you can comment on or make changes to this bug.
Description NISZ LibreOffice Team 2022-01-24 12:49:48 UTC
Description:
After multiple table rows moving with change tracking, it will be an empty row in the table where it moved

Steps to Reproduce:
    1. Open attached file
    2. Select the first two table rows by clicking on the left border of the first row, and by pressing mouse key  
    3. Select also the second table row  
    4. Drag the selected rows into the last table row

Actual Results:
Moving inserts an empty table row

Expected Results:
It should not insert an empty table row


Reproducible: Always


User Profile Reset: No



Additional Info:
Version: 7.4.0.0.alpha0+ (x64) / LibreOffice Community
Build ID: 86a9c860410351125708543c1050bfc0977d3b97
CPU threads: 8; OS: Windows 10.0 Build 18363; UI render: Skia/Vulkan; VCL: win
Locale: hu-HU (hu_HU); UI: hu-HU
Calc: CL
Comment 1 NISZ LibreOffice Team 2022-01-24 12:50:48 UTC
Created attachment 177753 [details]
Example file from Writer with a table
Comment 2 NISZ LibreOffice Team 2022-01-24 12:51:12 UTC
Created attachment 177754 [details]
Screenshot from the problem
Comment 3 Commit Notification 2022-01-26 17:10:20 UTC
László Németh committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/6ad9a3d74ef6eae3e645df12dedbe059acc180c4

tdf#146966 sw: fix inserting empty rows at copying multiple rows

It will be available in 7.4.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 László Németh 2022-01-26 17:28:32 UTC
Add keyword "regression".

Commit description:

tdf#146966 sw: fix inserting empty rows at copying multiple rows

HTML expansion of the clipboard content is used to calculate the
row number of the table on the clipboard. Skip its empty <tr></tr>
elements here, similar to Paste As HTML in Edit->Paste Special->
Paste Special... to avoid inserting empty rows (e.g. selecting and
copying/moving 4 rows inserted 30 extra empty rows).

Note: likely this was a regression, related to the new empty
rows in the clipboard/expansion code.
Comment 5 Commit Notification 2022-01-27 07:16:15 UTC
László Németh committed a patch related to this issue.
It has been pushed to "libreoffice-7-3":

https://git.libreoffice.org/core/commit/29233e10f00af0af132849485648664aadefd456

tdf#146966 sw: fix inserting empty rows at copying multiple rows

It will be available in 7.3.1.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 NISZ LibreOffice Team 2022-02-09 08:50:43 UTC
Verified in:
Version: 7.4.0.0.alpha0+ (x64) / LibreOffice Community
Build ID: 5c138ac6a8334825ef171ac6291b66b277eb4288
CPU threads: 8; OS: Windows 10.0 Build 18363; UI render: Skia/Vulkan; VCL: win
Locale: hu-HU (hu_HU); UI: hu-HU
Calc: CL