tdf#146966 sw: fix inserting empty rows at copying multiple rows

HTML expansion of the clipboard content is used to calculate the
row number of the table on the clipboard. Skip its empty <tr></tr>
elements here, similar to Paste As HTML in Edit->Paste Special->
Paste Special... to avoid inserting empty rows (e.g. selecting and
copying/moving 4 rows inserted 30 extra empty rows).

Note: likely this was a regression, related to the new empty
rows in the clipboard/expansion code.

Change-Id: I58b16c7869c08cda7e2a2c21c3c03bf38446d826